--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,15 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#ff784a" />
-  <meta name="fortmatic-site-verification" content="LzjrtdM7hqVJfvvA" />
+  <meta name="fortmatic-site-verification" content="%REACT_APP_FORTMATIC_SITE_VERIFICATION%" />
+  <meta name="Description" content="%META_DESCRIPTION%">
+  <meta property="og:title" content="CowSwap">
+  <meta property="og:description" content="%META_DESCRIPTION%">
+  <meta property="og:image" content="%PUBLIC_URL%/images/logo-cow-swap.png">
+  <meta property="og:url" content="https://cowswap.exchange">
+
+
+
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
