Add twitter tags

--- a/public/index.html
+++ b/public/index.html
@@ -11,41 +11,27 @@
   <meta name="theme-color" content="#ff784a" />
   <meta name="fortmatic-site-verification" content="%REACT_APP_FORTMATIC_SITE_VERIFICATION%" />
   <meta name="Description" content="%META_DESCRIPTION%">
+
+  <!-- Social media tags -->
   <meta property="og:title" content="CowSwap">
   <meta property="og:description" content="%META_DESCRIPTION%">
   <meta property="og:image" content="%PUBLIC_URL%/images/logo-cow-swap.png">
   <meta property="og:url" content="https://cowswap.exchange">
 
+  <!-- Twitter media tags -->
+  <meta name="twitter:title" content="European Travel Destinations ">
+  <meta name="twitter:description" content="%META_DESCRIPTION%">
+  <meta name="twitter:image" content="%PUBLIC_URL%/images/logo-cow-swap.png">
+  <meta name="twitter:card" content="%META_DESCRIPTION%">
 
 
-  <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-    <link rel="preconnect" href="https://www.google-analytics.com/">
-  -->
   <title>CowSwap</title>
 </head>
 
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
-  <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
 </body>
 
 </html>
