Add twitter handle

--- a/public/index.html
+++ b/public/index.html
@@ -20,6 +20,7 @@
 
   <!-- Twitter media tags -->
   <meta name="twitter:card" content="%META_DESCRIPTION%">
+  <meta name="twitter:site" content="@MEVprotection">
 
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
