Fix issues with tags

--- a/public/index.html
+++ b/public/index.html
@@ -10,16 +10,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#ff784a" />
   <meta name="fortmatic-site-verification" content="%REACT_APP_FORTMATIC_SITE_VERIFICATION%" />
-  <meta name="Description" content="%META_DESCRIPTION%">
+  <meta name="Description" content="%REACT_APP_META_DESCRIPTION%">
 
   <!-- Social media tags -->
+  <meta property="og:type" content="website" />
   <meta property="og:title" content="CowSwap">
-  <meta property="og:description" content="%META_DESCRIPTION%">
+  <meta property="og:description" content="%REACT_APP_META_DESCRIPTION%">
   <meta property="og:image" content="%PUBLIC_URL%/images/logo-cow-swap.png">
   <meta property="og:url" content="https://cowswap.exchange">
 
   <!-- Twitter media tags -->
-  <meta name="twitter:card" content="%META_DESCRIPTION%">
+  <meta name="twitter:card" content="%REACT_APP_META_DESCRIPTION%">
   <meta name="twitter:site" content="@MEVprotection">
 
 
