Update OG Meta image.

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="CowSwap">
   <meta property="og:description" content="%REACT_APP_META_DESCRIPTION%">
-  <meta property="og:image" content="%PUBLIC_URL%/images/logo-cow-swap.png">
+  <meta property="og:image" content="%PUBLIC_URL%/images/og-meta-cowswap.png">
   <meta property="og:url" content="https://cowswap.exchange">
 
   <!-- Twitter media tags -->
