--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,7 @@
   <meta property="og:url" content="https://cowswap.exchange">
 
   <!-- Twitter media tags -->
-  <meta name="twitter:card" content="%REACT_APP_META_DESCRIPTION%">
+  <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@MEVprotection">
 
 
