--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@MEVprotection">
   <meta name="twitter:title" content="CowSwap | Meta DEX aggregator">
-  <meta name="twitter:image" content="%PUBLIC_URL%/images/og-meta-cowswap.png">
+  <meta name="twitter:image" content="/images/og-meta-cowswap.png">
 
 
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
