Add description short/long

--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,8 @@
   <title>CowSwap - Meta DEX aggregator</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="%REACT_APP_META_DESCRIPTION%">
+  <meta name="description"
+    content="Ethereum's MetaDEX Aggregator that allows to trade with MEV protection while using ETH-less orders that are settled p2p among users or the best AMM.">
 
   <!-- Manifest, theme & colors -->
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -18,7 +19,8 @@
   <!-- Social media tags -->
   <meta property="og:type" content="website" />
   <meta property="og:title" content="CowSwap | Meta DEX aggregator">
-  <meta property="og:description" content="%REACT_APP_META_DESCRIPTION%">
+  <meta property="og:description"
+    content="Ethereums MetaDEX Aggregator built by Gnosis. It allows users to trade tokens with MEV protection while using ETH-less orders that are settled p2p among users or into the best on-chain liquidity pool.">
   <meta property="og:image" content="https://cowswap.exchange/images/og-meta-cowswap.png">
   <meta property="og:url" content="https://cowswap.exchange">
 
