--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
       }
     </style>
     <main>
-      <img src="https://cowswap.exchange/images/og-meta-cowswap.png" />
+      <img src="https://cowswap.exchange/images/og-meta-cowswap.png" alt="CowSwap Logo" />
       <p class="banner">CowSwap uses JavasScript. Please <a href="https://support.google.com/adsense/answer/12654?hl=en"
           target="_blank" rel="noopener noreferrer">enable it in your browser</a> 🐮</p>
 
